# trabalho_final_fup

./: README.md
agenda_medica/: AgendaMedica.spec  HISTORY.md  main.py  pyproject.toml
agenda_medica/src/app/: container.py  fachada.py
agenda_medica/src/dominio/: modelos.py  regras.py  repositorios.py  servicos.py
agenda_medica/src/infra/: repos_memoria.py
agenda_medica/test/ponta_a_ponta/: test_gui.py
agenda_medica/test/unitarios/: test_servicos.py
